--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://kaizen.wang
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -80,6 +80,3 @@ theme: maupassant
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
-
-# disqus 评论
-disqus: kaizenwang
