--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,7 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 # theme: landscape
 theme: maupassant
+post_asset_folder: true
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
