--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Kaizen
-subtitle: 学学技术，写写代码。
-description: 学学技术，写写代码。
+title: Kai
+subtitle: 待人友善是修养，独来独往是性格。
+description: 待人友善是修养，独来独往是性格。
 keywords:
 author: Wang Kai
 language: zh-CN
