--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "hexo-renderer-pug": "^0.0.5",
     "hexo-renderer-sass": "^0.4.0",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3",
-    "clean-css": ">=4.1.11"
+    "hexo-server": "^0.3.3"
   }
 }
