feat: update info

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Kai
-subtitle: 待人友善是修养，独来独往是性格。
-description: 待人友善是修养，独来独往是性格。
+title: i have a dream
+subtitle: 多学点总是好的
+description: 发一些自己学到的，遇到的和看到的
 keywords:
 author: Wang Kai
 language: zh-CN
