--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: i have a dream
+title: 欢迎到我的博客
 subtitle: 多学点总是好的
 description: 发一些自己学到的，遇到的和看到的
 keywords:
