--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 欢迎到我的博客
+title: 欢迎来到我的博客
 subtitle: 只有一技之长
 description: 发一些自己学到的，遇到的和看到的
 keywords:
