feat: update title

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 欢迎来到我的博客
-subtitle: 只有一技之长
-description: 发一些自己学到的，遇到的和看到的
+title: 老王的博客
+subtitle: 不积硅步，无以至千里
+description: 不积硅步，无以至千里
 keywords:
 author: Wang Kai
 language: zh-CN
