--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 老王的博客
+title: '
+  _   _      _ _    __        __         _     _ 
+ | | | | ___| | | __\ \      / /__  _ __| | __| |
+ | |_| |/ _ \ | |/ _ \ \ /\ / / _ \| '__| |/ _` |
+ |  _  |  __/ | | (_) \ V  V / (_) | |  | | (_| |
+ |_| |_|\___|_|_|\___/ \_/\_/ \___/|_|  |_|\__,_|
+'
 subtitle: 不积硅步，无以至千里
 description: 不积硅步，无以至千里
 keywords:
