--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 老王的博客
+title: Kaizenwang
 subtitle: 不积硅步，无以至千里
 description: 不积硅步，无以至千里
 keywords:
